[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/field_overhead.gd" type="Script" id=1]
[ext_resource path="res://assets/views/overhead-view.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/anim_tree.gd" type="Script" id=3]
[ext_resource path="res://assets/sound/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/raw/baseball.png" type="Texture" id=5]
[ext_resource path="res://scenes/ball.gd" type="Script" id=8]
[ext_resource path="res://assets/raw/ball_shadow.png" type="Texture" id=9]

[sub_resource type="PhysicsMaterial" id=1]
friction = 2.0
bounce = 0.005

[sub_resource type="PhysicsMaterial" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 8.77666

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ball_sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -45.0, 90.0, 270.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ball_sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.01, 0.01 ), Vector2( 0.0765674, 0.0765674 ), Vector2( 0.01, 0.01 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ball_shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 0.01, 0.01 ), Vector2( 0.05, 0.05 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("ball_sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -63.1945, -63.1945 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ball_sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.01, 0.01 ), Vector2( 0.01, 0.01 ) ]
}

[sub_resource type="Animation" id=6]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ball_sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -307.239, -130.346, -34.4153 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "roll"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=12]
states/hit/node = SubResource( 7 )
states/hit/position = Vector2( 186, 188 )
states/idle/node = SubResource( 8 )
states/idle/position = Vector2( 634, 188 )
states/roll/node = SubResource( 9 )
states/roll/position = Vector2( 408, 72 )
transitions = [ "hit", "roll", SubResource( 10 ), "roll", "idle", SubResource( 11 ) ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[node name="OverheadView" type="Node2D"]
script = ExtResource( 1 )

[node name="field_bg" type="Sprite" parent="."]
position = Vector2( 460, -99.9999 )
scale = Vector2( 1.44397, 1.49537 )
texture = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="field" type="Node" parent="."]

[node name="field_obstacles" type="StaticBody2D" parent="field"]
physics_material_override = SubResource( 1 )

[node name="outfield_fence" type="CollisionPolygon2D" parent="field/field_obstacles"]
position = Vector2( -383.876, -284.596 )
rotation = 0.409826
scale = Vector2( 1, 2.5 )
polygon = PoolVector2Array( -10.525, 9.80404, -18.7351, -69.9095, 14.4019, -134.57, 71.7714, -197.778, 246.291, -288.705, 393.024, -337.424, 743.732, -397.8, 906.281, -408.489, 1119.98, -405.977, 1371.72, -374.961, 1489.19, -348.932, 1589.31, -319.322, 1681.15, -284.307, 1668.61, -277.597, 1567.56, -313.276, 1473.75, -342.285, 1353.9, -367.9, 1126.76, -395.827, 912.022, -399.292, 750.146, -389.286, 550.457, -361.949, 403.012, -329.531, 260.37, -280.957, 92.9969, -191.271, 31.1753, -129.555, 2.54901, -72.4752, 10.9688, 9.91605 )
__meta__ = {
"_edit_lock_": true
}

[node name="game_border" type="CollisionPolygon2D" parent="field/field_obstacles"]
position = Vector2( 559.704, -59.7742 )
scale = Vector2( 48.84, 42.32 )
polygon = PoolVector2Array( -23.4175, 17.5293, -23.4175, 18.905, 21.461, 18.8241, 21.4918, -6.30603, 14.8302, -19.9137, -1.75731, -28.8318, -17.5454, -19.9906, -23.6075, -6.69043, -23.4727, 17.3787, -22.9743, 17.4126, -22.8747, -6.84419, -17.0605, -19.5293, -1.80536, -28.063, 14.4491, -19.0681, 20.8442, -5.92163, 20.8442, 17.7573 )
__meta__ = {
"_edit_lock_": true
}

[node name="red_dugout" type="CollisionPolygon2D" parent="field/field_obstacles"]
position = Vector2( -79.7784, 277.008 )
polygon = PoolVector2Array( 9.8631, -52.9938, 163.821, 97.4654, 111.336, 155.783, -44.9554, 6.49008 )
__meta__ = {
"_edit_lock_": true
}

[node name="blue_dugout" type="CollisionPolygon2D" parent="field/field_obstacles"]
position = Vector2( 983.933, 291.004 )
polygon = PoolVector2Array( 98.5056, -52.9938, 153.324, 5.32373, 0.532227, 156.949, -54.2861, 95.1327 )
__meta__ = {
"_edit_lock_": true
}

[node name="ball" type="RigidBody2D" parent="field"]
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
angular_damp = 60.0
applied_force = Vector2( 10, -200 )
applied_torque = 1.0
script = ExtResource( 8 )

[node name="ball_collision" type="CollisionShape2D" parent="field/ball"]
position = Vector2( 540, 520 )
rotation = -0.785398
scale = Vector2( 1.17967, 1.12307 )
shape = SubResource( 3 )

[node name="ball_shadow" type="Sprite" parent="field/ball"]
position = Vector2( 540.922, 520.922 )
rotation = 0.523599
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )

[node name="ball_sprite" type="Sprite" parent="field/ball"]
position = Vector2( 540, 520 )
rotation = -1.10295
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 5 )

[node name="ballCamera" type="Camera2D" parent="field/ball/ball_sprite"]
rotation = 0.785398
scale = Vector2( 277.778, 277.778 )
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 3.0
editor_draw_limits = true

[node name="anim" type="AnimationPlayer" parent="field/ball"]
anims/hit = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/roll = SubResource( 6 )

[node name="anim_tree" type="AnimationTree" parent="field/ball"]
tree_root = SubResource( 12 )
anim_player = NodePath("../anim")
parameters/playback = SubResource( 13 )
script = ExtResource( 3 )
